--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @gimhyoungsoo @schani3 @prinzusseugen @tyrue @ahuthut @yejicho-helloworld
+* @gimhyoungsoo @schani3 @prinzusseugen @tyrue @ahuthut @yejicho-helloworld @Riz-05
