[BE] :sparkles: spring security config 추가, 유저 컨트롤러, 매퍼, 리포지토리, 서비스 추가, 유저 회원가입 추가

--- a/server/grilledshrimp/src/main/resources/application.yml
+++ b/server/grilledshrimp/src/main/resources/application.yml
@@ -20,10 +20,7 @@ spring:
     security:
       oauth2:
         client:
-            registration:
-              google:
-                client-id: ${GOOGLE_CLIENT_ID}
-                client-secret: ${GOOGLE_CLIENT_SECRET}
+              
 
 logging:
     level:
@@ -36,3 +33,15 @@ jwt:
     key: ${JWT_SECRET_KEY}
     access-token-expiration-minutes: 30
     refresh-token-expiration-minutes: 420
+
+cloud:
+    aws:
+        region:
+            static: ap-northeast-2
+        stack:
+            auto: false
+
+# admin용 계정
+mail:
+    address:
+        admin: admin@gmail.com
