--- a/server/grilledshrimp/build.gradle
+++ b/server/grilledshrimp/build.gradle
@@ -49,6 +49,11 @@ dependencies {
 
 	implementation 'org.mapstruct:mapstruct:1.5.2.Final'
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.2.Final'
+
+	implementation 'com.google.code.gson:gson:2.9.0'
+
+	// redis 라이브러리
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 }
 
 tasks.named('test') {
