--- a/server/grilledshrimp/src/main/resources/application.yml
+++ b/server/grilledshrimp/src/main/resources/application.yml
@@ -7,12 +7,20 @@ spring:
             enabled: true
             path: /h2
     datasource:
-        username: sa
-        password:
-        url: jdbc:h2:mem:test
+        # h2
+        #username: sa
+        #password:
+        #url: jdbc:h2:mem:test
+
+        # mysql
+        driver-class-name: com.mysql.cj.jdbc.Driver
+        url: jdbc:mysql://grilled-shrimp.c6a7jtcqynrk.ap-northeast-2.rds.amazonaws.com:3306/GS?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+        username: root
+        password: grilled30
+
     jpa:
         hibernate:
-            ddl-auto: create  # (1) 스키마 자동 생성
+            ddl-auto: update  # (1) 스키마 자동 생성
         show-sql: true      # (2) SQL 쿼리 출력
         properties:
             hibernate:
